--- a/qr-code-generator-ui/src/App.css
+++ b/qr-code-generator-ui/src/App.css
@@ -3,40 +3,36 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.workspace {
+  display: flex;
+  gap: 50px;
+}
+.qr-code {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.qr-code canvas {
+  box-shadow: 0 0 20px gray;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.qr-code p {
+  margin-top: 30px;
+  padding: 2px 30px 2px 30px;
+  border-radius: 10px;
+  background-color: rgb(150, 150, 150);
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+footer {
+  color: rgb(66, 66, 66);
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
 }
