--- a/qr-code-generator-ui/src/App.css
+++ b/qr-code-generator-ui/src/App.css
@@ -1,14 +1,13 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  align-items: center;
 }
 .workspace {
+  margin-top: 60px;
   display: flex;
+  place-items: center;
   gap: 50px;
 }
 .qr-code {
@@ -29,10 +28,10 @@
   text-align: center;
 }
 
-footer {
+.footer {
+  position: absolute;
+  bottom: 20px;
   color: rgb(66, 66, 66);
-  text-align: center;
-  bottom: 0;
-  width: 100%;
+
   height: 2.5rem;
 }
