--- a/qr-code-generator-ui/src/App.css
+++ b/qr-code-generator-ui/src/App.css
@@ -1,10 +1,11 @@
 #root {
-  margin: 0 auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .workspace {
+  margin: 0 auto;
   margin-top: 60px;
   display: flex;
   place-items: center;
@@ -29,12 +30,4 @@
   background-color: rgb(137, 221, 255);
   text-align: center;
   gap: 10px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 20px;
-  color: rgb(66, 66, 66);
-
-  height: 2.5rem;
 }
