Reworked design + mobile responsive

--- a/qr-code-generator-ui/src/components/common/common.css
+++ b/qr-code-generator-ui/src/components/common/common.css
@@ -1,4 +1,7 @@
 .nav {
+  position: absolute;
+  left: 0;
+  top: 0;
   box-sizing: border-box;
   width: 100%;
   background-color: white;
@@ -6,6 +9,7 @@
   justify-content: space-between;
   padding: 20px;
   box-shadow: 0 0 20px gray;
+  z-index: 2;
 }
 .brand {
   display: flex;
@@ -94,7 +98,16 @@ a {
 .side-nav {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 400px;
   height: 100%;
+}
+
+.side-nav-btn {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  background-color: white;
+  border-radius: 0 20px 20px 0;
+  padding: 10px;
 }
