--- a/qr-code-generator-ui/src/App.css
+++ b/qr-code-generator-ui/src/App.css
@@ -1,20 +1,50 @@
 #root {
   width: 100%;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
 }
 .workspace {
-  margin: 0 auto;
-  margin-top: 60px;
+  width: 100%;
   display: flex;
-  place-items: center;
-  gap: 50px;
+  height: 100vh;
+  justify-content: space-between;
 }
+
+.workspace-col {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
+}
+
 .qr-code {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+}
+.qr-code a {
+  width: 100%;
+}
+
+.output-container {
+  display: flex;
+  width: 100%;
+  max-width: 1200px;
+  justify-self: flex-start;
+  justify-content: flex-end;
+  align-items: center;
+}
+.output-container-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .qr-code canvas {
