--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,36 @@
 #root {
   width: 100%;
-  /* display: flex;
-  flex-direction: column;
+
+  /* flex-direction: column;
   align-items: center; */
 }
-.workspace {
+.app {
   width: 100%;
+  /* max-width: 1200px; */
   display: flex;
+  margin: 0 auto;
+}
+.workspace {
+  width: 65vw;
+  display: flex;
+  flex-direction: column;
   height: 100vh;
-  justify-content: space-between;
+  padding-left: 100px;
+  /* background-color: #00013e; */
+  background-color: rgb(255, 255, 255);
+
+  /* background-image: url("assets/ctb.svg"); */
+}
+.preview-pane {
+  width: 35vw;
+  min-width: 500px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  background-color: #162149;
+  /* background-image: url("assets/bg.png"); */
 }
 
 .workspace-col {
@@ -34,10 +56,8 @@
 
 .output-container {
   display: flex;
-  width: 100%;
-  max-width: 1200px;
-  justify-self: flex-start;
-  justify-content: flex-end;
+  width: 300px;
+  min-width: 300px;
   align-items: center;
 }
 .output-container-col {
@@ -49,15 +69,4 @@
 
 .qr-code canvas {
   box-shadow: 0 0 20px gray;
-}
-
-.qr-code .info {
-  display: flex;
-  align-items: center;
-  margin-top: 30px;
-  padding: 10px 20px 10px 20px;
-  border-radius: 10px;
-  background-color: rgb(137, 221, 255);
-  text-align: center;
-  gap: 10px;
 }
