--- a/src/components/common/common.css
+++ b/src/components/common/common.css
@@ -1,25 +1,24 @@
 .nav {
-  position: absolute;
   left: 0;
   top: 0;
   box-sizing: border-box;
-  width: 100%;
-  background-color: white;
+
   display: flex;
   justify-content: space-between;
   padding: 20px;
-  box-shadow: 0 0 20px gray;
-  z-index: 2;
-}
-.brand {
-  display: flex;
-  align-items: center;
-}
 
-.brand img {
-  width: 50px;
-  height: 50px;
-  margin-right: 20px;
+  z-index: 2;
+
+  .brand {
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 50px;
+      height: 50px;
+      margin-right: 20px;
+    }
+  }
 }
 
 .title {
