--- a/src/components/settings.css
+++ b/src/components/settings.css
@@ -1,15 +1,36 @@
 .settings {
-  box-sizing: border-box;
-  justify-self: flex-end;
-  width: 500px;
+  max-width: 700px;
+  width: 100%;
+  margin: 50px;
+  align-self: center;
   display: flex;
-  flex-direction: column;
-  gap: 30px;
-  padding: 50px;
-  padding-top: 150px;
-  height: 100vh;
-  margin-left: 80px;
+  padding: 10px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: #162149;
   /* align-self: flex-start; */
+
+  .workarea {
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    background-color: white;
+  }
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  button {
+    all: unset;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    cursor: pointer;
+  }
 }
 
 .color-picker {
